[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fair_fairness_benchmark"
version = "0.1.0"
description = "Fairness benchmarking toolkit for machine learning."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Original Authors", email = "noreply@example.com"}
]
dependencies = [
    "pandas==1.5.3",
	"torch==1.13.1+cu116",
	"wandb==0.14.0",
	"scikit-learn==1.2.2",
	"tabulate==0.9.0",
	"statsmodels==0.13.5"
]
